# SocketCan2Rest

./: README.md  build_can2rest.sh  can2rest_config.ini  can2rest_template.service  init_usbtin.sh  install_can_utils_and_usbtin_service.sh  install_service.sh
can2rest/: can2rest.cpp  can_frame_to_json.cpp  can_frame_to_json.h  can_hashtable.cpp  can_id_filter.cpp  can_id_filter.h  can_message.cpp  can_message.h  config_parser.h  redis_interface.h  rest_api.cpp
can2rest/SHARED/socketcan-cpp/: CMakeLists.txt
can2rest/SHARED/socketcan-cpp/include/socketcan_cpp/: socketcan_cpp.h
can2rest/json11/: test
documentation/: can2rest.postman_collection.json
libs/: install_libs.sh
libs/nanomsg/: CTestTestfile.cmake  install_manifest.txt
libs/nanomsg/src/: nanomsg.pc
libs/redis-plus-plus/: CPackSourceConfig.cmake
libs/redis-plus-plus/cmake/: redis++-targets.cmake
nanomsg/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
nanomsg/src/: cmake_install.cmake
redis-plus-plus/: CPackConfig.cmake  libredis++.so.1.3.3
service/: .gitignore  99-can2rest.rules  can2rest.service.TEMPLATE  init_usbtin.sh  install_service.sh  start_can2rest.sh.TEMPLATE  start_gm70rest.sh.TEMPLATE
src/: 99-usbtin.rules  Dockerfile  build_can2rest.sh  can2rest_config.ini.EXAMPLE  config_parser.cpp  frame_send_queue.h  install_can_utils_and_usbtin.sh  install_can_utils_and_usbtin_service.sh  install_service.sh  rest_api.h  start_can2rest_template.sh
src/can2rest/: .gitignore  CMakeLists.txt  build_docker.sh  can2rest.cpp  can2rest_config.ini  can2rest_config.ini.EXAMPLE  can_hashtable.h  frame_send_queue.cpp  redis_interface.cpp
src/can2rest/SHARED/hash-library/: sha256.cpp
src/nanomsg/: libnanomsg.so.5.1.0
src/redis-plus-plus/test/: test_redis++
